--- a/CosmosDB.Gremlin.Fluent/CosmosDB.Gremlin.Fluent.csproj
+++ b/CosmosDB.Gremlin.Fluent/CosmosDB.Gremlin.Fluent.csproj
@@ -6,14 +6,20 @@
     <Version>0.2.7</Version>
     <AssemblyVersion>0.2.7.0</AssemblyVersion>
     <FileVersion>0.2.7.0</FileVersion>
-    <Authors>systemidx</Authors>
+    <Authors>systemidx, A. Assam</Authors>
     <Company />
     <PackageTags>gremlin, cosmosdb, tinkerpop</PackageTags>
     <PackageProjectUrl>https://github.com/systemidx/CosmosDB.Gremlin.Fluent</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/systemidx/CosmosDB.Gremlin.Fluent/blob/master/LICENSE</PackageLicenseUrl>
     <Description>Provides a fluent LINQ type query builder for building Gremlin queries.</Description>
     <RepositoryUrl>https://github.com/systemidx/CosmosDB.Gremlin.Fluent</RepositoryUrl>
-    <PackageReleaseNotes>v0.2.7: Adds support for neq() with parameters</PackageReleaseNotes>
+    <PackageReleaseNotes>v0.3.0: Added support for arguments.
+Added from, hasId, hasNot, valueMap
+Added implicit parameter support to simplify syntax 
+</PackageReleaseNotes>
+    <PackageVersion>0.3.0</PackageVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>strongName.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
 </Project>
