--- a/CosmosDB.Gremlin.Fluent/CosmosDB.Gremlin.Fluent.csproj
+++ b/CosmosDB.Gremlin.Fluent/CosmosDB.Gremlin.Fluent.csproj
@@ -13,7 +13,8 @@
     <PackageLicenseUrl>https://github.com/systemidx/CosmosDB.Gremlin.Fluent/blob/master/LICENSE</PackageLicenseUrl>
     <Description>Provides a fluent LINQ type query builder for building Gremlin queries.</Description>
     <RepositoryUrl>https://github.com/systemidx/CosmosDB.Gremlin.Fluent</RepositoryUrl>
-    <PackageReleaseNotes>c0.3.11: Fixed and improved parameter validations
+    <PackageReleaseNotes>v0.3.12: Added within and without predicates
+v0.3.11: Fixed and improved parameter validations
 v0.3.10: Improved hasId() to support multiple parameters correctly
 v0.3.9: Changed type restrictions on several predicates and functions to conform to TinkerPop 3.4.0 specifications
 v0.3.8: Added remaining missing functions from https://docs.microsoft.com/en-us/azure/cosmos-db/gremlin-support as of 02/08/2019
@@ -28,7 +29,7 @@ v0.3.0: Added support for arguments.
 Added from, hasId, hasNot, valueMap
 Added implicit parameter support to simplify syntax 
 </PackageReleaseNotes>
-    <PackageVersion>0.3.11</PackageVersion>
+    <PackageVersion>0.3.12</PackageVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>strongName.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
