--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
     displayName: 'dotnet test'
     inputs:
       command: test
-      projects: \**\*test*\**\*.csproj
+      projects: /**/CosmosDB.Gremlin.Fluent.Tests.csproj
       arguments: /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
 
   - task: PublishCodeCoverageResults@1
