Updated unit test dependencies and added coverlet for code coverage analysis

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,7 @@ steps:
     displayName: 'dotnet build'
     inputs:
       projects: '$(solution)'
+      configuration: '$(buildConfiguration)'
 
   - task: DotNetCoreCLI@2
     displayName: 'dotnet test'
