--- a/CosmosDB.Gremlin.Fluent/CosmosDB.Gremlin.Fluent.csproj
+++ b/CosmosDB.Gremlin.Fluent/CosmosDB.Gremlin.Fluent.csproj
@@ -13,7 +13,8 @@
     <PackageLicenseUrl>https://github.com/systemidx/CosmosDB.Gremlin.Fluent/blob/master/LICENSE</PackageLicenseUrl>
     <Description>Provides a fluent LINQ type query builder for building Gremlin queries.</Description>
     <RepositoryUrl>https://github.com/systemidx/CosmosDB.Gremlin.Fluent</RepositoryUrl>
-    <PackageReleaseNotes>v0.3.17: Added support for specifying partition keys as query arguments
+    <PackageReleaseNotes>v0.3.18: All available functions have been verified to work with CosmosDb and documented. Parameter validations added and additional validations for hardening introduced
+v0.3.17: Added support for specifying partition keys as query arguments
 v0.3.16: Add support for specifying partition strategy on graph traversal sources
 v0.3.15: Fixed missing argument handling on several functions
 v0.3.14: Added overload to query builder constructor to permit initialising it with a parameter directly. Useful for complex sub-queries
@@ -34,7 +35,7 @@ v0.3.0: Added support for arguments.
 Added from, hasId, hasNot, valueMap
 Added implicit parameter support to simplify syntax 
 </PackageReleaseNotes>
-    <PackageVersion>0.3.17</PackageVersion>
+    <PackageVersion>0.3.18</PackageVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>strongName.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
