--- a/CosmosDB.Gremlin.Fluent/CosmosDB.Gremlin.Fluent.csproj
+++ b/CosmosDB.Gremlin.Fluent/CosmosDB.Gremlin.Fluent.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.3.21</Version>
-    <AssemblyVersion>0.3.21.0</AssemblyVersion>
-    <FileVersion>0.3.21.0</FileVersion>
+    <Version>0.3.22</Version>
+    <AssemblyVersion>0.3.22.0</AssemblyVersion>
+    <FileVersion>0.3.22.0</FileVersion>
     <Authors>systemidx, A. Assam</Authors>
     <Company />
     <PackageTags>gremlin, cosmosdb, tinkerpop</PackageTags>
@@ -13,7 +13,8 @@
     <PackageLicenseExpression> Apache-2.0</PackageLicenseExpression>
     <Description>Provides a fluent LINQ type query builder for building Gremlin queries.</Description>
     <RepositoryUrl>https://github.com/AieatAssam/CosmosDB.Gremlin.Fluent</RepositoryUrl>
-    <PackageReleaseNotes>v0.3.21: Added additional documentation, changed package to include XML documentation file 
+    <PackageReleaseNotes>v0.3.22: Added additional overloads and validations to valueMap() to reflect available options in CosmosDb as of 05/11/2019
+v0.3.21: Added additional documentation, changed package to include XML documentation file 
 v0.3.20: Additional functions, overloads and extensive hardening
 v0.3.19: Added is() function
 v0.3.18: Documented all functions, tested them against CosmosDb. Added several missing functions. Hardened parameter checks and added missing overloads. Removed functions not supported by CosmosDb.
@@ -36,7 +37,7 @@ v0.3.2: Added not()
 v0.3.1: Fixed issue with argument values
 v0.3.0: Added support for arguments. Added from, hasId, hasNot, valueMap. Added implicit parameter support to simplify syntax 
 </PackageReleaseNotes>
-    <PackageVersion>0.3.21</PackageVersion>
+    <PackageVersion>0.3.22</PackageVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>strongName.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
